opa/svc-selector-not-admin/disallow.yml
kind: Service
apiVersion: v1

metadata:
  name: admin-nodeport-service

spec:
  selector:
    owner: "admin"
  type: NodePort

  ports:
  - name: admin-port
    port: 80
    targetPort: 8080
