opa/svc-selector-not-admin/constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sServiceSelectorNotAdmin
metadata:
  name: k8sserviceselectornotadmin

spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
