opa/svc-selector-not-admin/template.yml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sserviceselectornotadmin
  annotations:
    metadata.gatekeeper.sh/title: "Service Selector Not Admin"
    metadata.gatekeeper.sh/version: 1.0.0
    description: >-
      Disallows Services with selectors that include the "kubernetes.io/metadata.name" label.

      This is to prevent services from being misconfigured to select all pods in the cluster.

spec:
  crd:
    spec:
      names:
        kind: K8sServiceSelectorNotAdmin

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sserviceselectornotadmin

        violation[{"msg": msg}] {
          input.review.kind.kind == "Service"                   # Ensure the kind is Service
          input.review.object.spec.selector["owner"] == "admin" # Check if the selector contains the label
          input.review.object.spec.type == "NodePort"           # Check if the selector is nodeport
          msg := "Services that owns as admin must not be 'NodePort'."
        }
